# sutra

./: .gitignore  AGENTS.md  CLAUDE.md  CODEMAP.md  LICENSE  README.md  index.html  package-lock.json  package.json
plans/: sutra-changes-integrate-more-abundant-cherny.md
src/: agent-tracking.ts  annotation-agent.ts  annotation-core.ts  annotations.ts  automations.ts  browser.ts  composer-complete.ts  composer-store.ts  composer.ts  conflict.ts  contextmenu.ts  (+33 more)
src-tauri/: Cargo.toml  tauri.conf.json  …ctl
src-tauri/agent/: annotation-agent.js
src-tauri/capabilities/: default.json
src-tauri/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
src-tauri/graphify-out/cache/: stat-index.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: agent_tracker.rs  assets.rs  debug.rs  fs_cmds.rs  git.rs  lib.rs  main.rs  mcp.rs  mcp_config.rs  preview_server.rs  proxy.rs  pty.rs  search.rs  watcher.rs
src-tauri/src/lang/: engine.rs  features.rs  language.rs  mod.rs  parser_cache.rs  registry.rs  symbol_index.rs
src-tauri/src/lang/features/: completion.rs  hover.rs  navigation.rs  symbols.rs
src-tauri/src/lang/queries/css/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/go/: scopes.scm  symbols.scm
src-tauri/src/lang/queries/html/: scopes.scm  symbols.scm
src-tauri/src/lang/queries/java/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/javascript/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/json/: scopes.scm  symbols.scm
src-tauri/src/lang/queries/markdown/: symbols.scm
src-tauri/src/lang/queries/python/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/ruby/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/rust/: members.scm  scopes.scm  symbols.scm
src-tauri/src/lang/queries/typescript/: scopes.scm  symbols.scm
(+91 files in other folders)
