[package]
name = "sutra"
version = "1.3.3"
description = "Sutra — minimal Rust + Tauri code editor"
authors = ["ravi1395"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sutra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"
portable-pty = "0.9.0"
git2 = "0.21.0"
base64 = "0.22.1"
ignore = "0.4"
regex = "1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "sync", "time"] }
toml = "0.8"
trash = "5"
getrandom = "0.3"
notify = "8.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-md = "0.3"

# The self-updater is desktop-only (no Android/iOS bundle target).
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
